src-provided/worms/model/programs/parser/WormsParserParser.java
// Generated from WormsParser.g4 by ANTLR 4.2.2
 package worms.model.programs.parser; 
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class WormsParserParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SELF=1, TRUE=2, FALSE=3, NULL=4, PRINT=5, BOOL=6, DOUBLE=7, ENTITY=8, 
		WORM=9, FOOD=10, TERRAIN=11, ANY=12, GETX=13, GETY=14, GETDIR=15, GETRADIUS=16, 
		GETAP=17, GETMAXAP=18, GETHP=19, GETMAXHP=20, SAMETEAM=21, SEARCHOBJ=22, 
		ISWORM=23, ISFOOD=24, SQRT=25, SIN=26, COS=27, NOT=28, TURN=29, MOVE=30, 
		JUMP=31, TOGGLEWEAP=32, FIRE=33, SKIP=34, IF=35, THEN=36, ELSE=37, WHILE=38, 
		DO=39, FOREACH=40, ASSIGN=41, MUL=42, DIV=43, ADD=44, SUB=45, EQ=46, NEQ=47, 
		LT=48, GT=49, LEQ=50, GEQ=51, AND=52, OR=53, NUMBER=54, FLOAT=55, INTEGER=56, 
		IDENTIFIER=57, LEFT_PAREN=58, RIGHT_PAREN=59, LEFT_BRACE=60, RIGHT_BRACE=61, 
		SEMICOLON=62, COMMA=63, WHITESPACE=64, SINGLE_COMMENT=65;
	public static final String[] tokenNames = {
		"<INVALID>", "'self'", "'true'", "'false'", "'null'", "'print'", "'bool'", 
		"'double'", "'entity'", "'worm'", "'food'", "'terrain'", "'any'", "'getx'", 
		"'gety'", "'getdir'", "'getradius'", "'getap'", "'getmaxap'", "'gethp'", 
		"'getmaxhp'", "'sameteam'", "'searchobj'", "'isworm'", "'isfood'", "'sqrt'", 
		"'sin'", "'cos'", "'!'", "'turn'", "'move'", "'jump'", "'toggleweap'", 
		"'fire'", "'skip'", "'if'", "'then'", "'else'", "'while'", "'do'", "'foreach'", 
		"':='", "'*'", "'/'", "'+'", "'-'", "'=='", "'!='", "'<'", "'>'", "'<='", 
		"'>='", "'&&'", "'||'", "NUMBER", "FLOAT", "INTEGER", "IDENTIFIER", "'('", 
		"')'", "'{'", "'}'", "';'", "','", "WHITESPACE", "SINGLE_COMMENT"
	};
	public static final int
		RULE_eval = 0, RULE_decl = 1, RULE_action = 2, RULE_unop = 3, RULE_ctrl = 4, 
		RULE_ifthenelse = 5, RULE_whiledo = 6, RULE_foreach = 7, RULE_assign = 8, 
		RULE_expr = 9, RULE_namedconst = 10, RULE_type = 11, RULE_entityspec = 12, 
		RULE_binop = 13;
	public static final String[] ruleNames = {
		"eval", "decl", "action", "unop", "ctrl", "ifthenelse", "whiledo", "foreach", 
		"assign", "expr", "namedconst", "type", "entityspec", "binop"
	};

	@Override
	public String getGrammarFileName() { return "WormsParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }




	public WormsParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class EvalContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(WormsParserParser.PRINT, 0); }
		public TerminalNode SEMICOLON() { return getToken(WormsParserParser.SEMICOLON, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public EvalContext eval() {
			return getRuleContext(EvalContext.class,0);
		}
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public CtrlContext ctrl() {
			return getRuleContext(CtrlContext.class,0);
		}
		public EvalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eval; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WormsParserListener ) ((WormsParserListener)listener).enterEval(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WormsParserListener ) ((WormsParserListener)listener).exitEval(this);
		}
	}

	public final EvalContext eval() throws RecognitionException {
		EvalContext _localctx = new EvalContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_eval);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			switch (_input.LA(1)) {
			case BOOL:
			case DOUBLE:
			case ENTITY:
				{
				setState(28); decl();
				setState(29); match(SEMICOLON);
				}
				break;
			case TURN:
			case MOVE:
			case JUMP:
			case TOGGLEWEAP:
			case FIRE:
			case SKIP:
				{
				setState(31); action();
				setState(32); match(SEMICOLON);
				}
				break;
			case IDENTIFIER:
				{
				setState(34); assign();
				setState(35); match(SEMICOLON);
				}
				break;
			case PRINT:
				{
				setState(37); match(PRINT);
				setState(38); expr(0);
				setState(39); match(SEMICOLON);
				}
				break;
			case IF:
			case WHILE:
			case FOREACH:
				{
				setState(41); ctrl();
				}
				break;
			case SEMICOLON:
				{
				setState(42); match(SEMICOLON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(46);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT) | (1L << BOOL) | (1L << DOUBLE) | (1L << ENTITY) | (1L << TURN) | (1L << MOVE) | (1L << JUMP) | (1L << TOGGLEWEAP) | (1L << FIRE) | (1L << SKIP) | (1L << IF) | (1L << WHILE) | (1L << FOREACH) | (1L << IDENTIFIER) | (1L << SEMICOLON))) != 0)) {
				{
				setState(45); eval();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(WormsParserParser.ASSIGN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(WormsParserParser.IDENTIFIER, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WormsParserListener ) ((WormsParserListener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WormsParserListener ) ((WormsParserListener)listener).exitDecl(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48); type();
			setState(49); match(IDENTIFIER);
			setState(52);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(50); match(ASSIGN);
				setState(51); expr(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionContext extends ParserRuleContext {
		public TerminalNode MOVE() { return getToken(WormsParserParser.MOVE, 0); }
		public TerminalNode TOGGLEWEAP() { return getToken(WormsParserParser.TOGGLEWEAP, 0); }
		public TerminalNode FIRE() { return getToken(WormsParserParser.FIRE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SKIP() { return getToken(WormsParserParser.SKIP, 0); }
		public TerminalNode JUMP() { return getToken(WormsParserParser.JUMP, 0); }
		public TerminalNode TURN() { return getToken(WormsParserParser.TURN, 0); }
		public ActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WormsParserListener ) ((WormsParserListener)listener).enterAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WormsParserListener ) ((WormsParserListener)listener).exitAction(this);
		}
	}

	public final ActionContext action() throws RecognitionException {
		ActionContext _localctx = new ActionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_action);
		try {
			setState(62);
			switch (_input.LA(1)) {
			case TURN:
				enterOuterAlt(_localctx, 1);
				{
				setState(54); match(TURN);
				setState(55); expr(0);
				}
				break;
			case MOVE:
				enterOuterAlt(_localctx, 2);
				{
				setState(56); match(MOVE);
				}
				break;
			case JUMP:
				enterOuterAlt(_localctx, 3);
				{
				setState(57); match(JUMP);
				}
				break;
			case TOGGLEWEAP:
				enterOuterAlt(_localctx, 4);
				{
				setState(58); match(TOGGLEWEAP);
				}
				break;
			case FIRE:
				enterOuterAlt(_localctx, 5);
				{
				setState(59); match(FIRE);
				setState(60); expr(0);
				}
				break;
			case SKIP:
				enterOuterAlt(_localctx, 6);
				{
				setState(61); match(SKIP);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnopContext extends ParserRuleContext {
		public TerminalNode GETRADIUS() { return getToken(WormsParserParser.GETRADIUS, 0); }
		public TerminalNode ISWORM() { return getToken(WormsParserParser.ISWORM, 0); }
		public TerminalNode SIN() { return getToken(WormsParserParser.SIN, 0); }
		public TerminalNode GETDIR() { return getToken(WormsParserParser.GETDIR, 0); }
		public TerminalNode ISFOOD() { return getToken(WormsParserParser.ISFOOD, 0); }
		public TerminalNode GETMAXAP() { return getToken(WormsParserParser.GETMAXAP, 0); }
		public TerminalNode SEARCHOBJ() { return getToken(WormsParserParser.SEARCHOBJ, 0); }
		public TerminalNode COS() { return getToken(WormsParserParser.COS, 0); }
		public TerminalNode GETAP() { return getToken(WormsParserParser.GETAP, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode NOT() { return getToken(WormsParserParser.NOT, 0); }
		public TerminalNode SAMETEAM() { return getToken(WormsParserParser.SAMETEAM, 0); }
		public TerminalNode RIGHT_PAREN() { return getToken(WormsParserParser.RIGHT_PAREN, 0); }
		public TerminalNode GETY() { return getToken(WormsParserParser.GETY, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(WormsParserParser.LEFT_PAREN, 0); }
		public TerminalNode GETX() { return getToken(WormsParserParser.GETX, 0); }
		public TerminalNode GETHP() { return getToken(WormsParserParser.GETHP, 0); }
		public TerminalNode SQRT() { return getToken(WormsParserParser.SQRT, 0); }
		public TerminalNode GETMAXHP() { return getToken(WormsParserParser.GETMAXHP, 0); }
		public UnopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WormsParserListener ) ((WormsParserListener)listener).enterUnop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WormsParserListener ) ((WormsParserListener)listener).exitUnop(this);
		}
	}

	public final UnopContext unop() throws RecognitionException {
		UnopContext _localctx = new UnopContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_unop);
		try {
			setState(105);
			switch (_input.LA(1)) {
			case GETX:
				enterOuterAlt(_localctx, 1);
				{
				setState(64); match(GETX);
				setState(65); expr(0);
				}
				break;
			case GETY:
				enterOuterAlt(_localctx, 2);
				{
				setState(66); match(GETY);
				setState(67); expr(0);
				}
				break;
			case GETDIR:
				enterOuterAlt(_localctx, 3);
				{
				setState(68); match(GETDIR);
				setState(69); expr(0);
				}
				break;
			case GETRADIUS:
				enterOuterAlt(_localctx, 4);
				{
				setState(70); match(GETRADIUS);
				setState(71); expr(0);
				}
				break;
			case GETAP:
				enterOuterAlt(_localctx, 5);
				{
				setState(72); match(GETAP);
				setState(73); expr(0);
				}
				break;
			case GETMAXAP:
				enterOuterAlt(_localctx, 6);
				{
				setState(74); match(GETMAXAP);
				setState(75); expr(0);
				}
				break;
			case GETHP:
				enterOuterAlt(_localctx, 7);
				{
				setState(76); match(GETHP);
				setState(77); expr(0);
				}
				break;
			case GETMAXHP:
				enterOuterAlt(_localctx, 8);
				{
				setState(78); match(GETMAXHP);
				setState(79); expr(0);
				}
				break;
			case SAMETEAM:
				enterOuterAlt(_localctx, 9);
				{
				setState(80); match(SAMETEAM);
				setState(81); expr(0);
				}
				break;
			case SEARCHOBJ:
				enterOuterAlt(_localctx, 10);
				{
				setState(82); match(SEARCHOBJ);
				setState(83); expr(0);
				}
				break;
			case ISWORM:
				enterOuterAlt(_localctx, 11);
				{
				setState(84); match(ISWORM);
				setState(85); expr(0);
				}
				break;
			case ISFOOD:
				enterOuterAlt(_localctx, 12);
				{
				setState(86); match(ISFOOD);
				setState(87); expr(0);
				}
				break;
			case SQRT:
				enterOuterAlt(_localctx, 13);
				{
				setState(88); match(SQRT);
				setState(89); match(LEFT_PAREN);
				setState(90); expr(0);
				setState(91); match(RIGHT_PAREN);
				}
				break;
			case SIN:
				enterOuterAlt(_localctx, 14);
				{
				setState(93); match(SIN);
				setState(94); match(LEFT_PAREN);
				setState(95); expr(0);
				setState(96); match(RIGHT_PAREN);
				}
				break;
			case COS:
				enterOuterAlt(_localctx, 15);
				{
				setState(98); match(COS);
				setState(99); match(LEFT_PAREN);
				setState(100); expr(0);
				setState(101); match(RIGHT_PAREN);
				}
				break;
			case NOT:
				enterOuterAlt(_localctx, 16);
				{
				setState(103); match(NOT);
				setState(104); expr(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CtrlContext extends ParserRuleContext {
		public WhiledoContext whiledo() {
			return getRuleContext(WhiledoContext.class,0);
		}
		public ForeachContext foreach() {
			return getRuleContext(ForeachContext.class,0);
		}
		public IfthenelseContext ifthenelse() {
			return getRuleContext(IfthenelseContext.class,0);
		}
		public CtrlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ctrl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WormsParserListener ) ((WormsParserListener)listener).enterCtrl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WormsParserListener ) ((WormsParserListener)listener).exitCtrl(this);
		}
	}

	public final CtrlContext ctrl() throws RecognitionException {
		CtrlContext _localctx = new CtrlContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ctrl);
		try {
			setState(110);
			switch (_input.LA(1)) {
			case IF:
				enterOuterAlt(_localctx, 1);
				{
				setState(107); ifthenelse();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 2);
				{
				setState(108); whiledo();
				}
				break;
			case FOREACH:
				enterOuterAlt(_localctx, 3);
				{
				setState(109); foreach();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfthenelseContext extends ParserRuleContext {
		public TerminalNode THEN() { return getToken(WormsParserParser.THEN, 0); }
		public TerminalNode IF() { return getToken(WormsParserParser.IF, 0); }
		public EvalContext eval(int i) {
			return getRuleContext(EvalContext.class,i);
		}
		public List<TerminalNode> RIGHT_BRACE() { return getTokens(WormsParserParser.RIGHT_BRACE); }
		public TerminalNode LEFT_BRACE(int i) {
			return getToken(WormsParserParser.LEFT_BRACE, i);
		}
		public TerminalNode ELSE() { return getToken(WormsParserParser.ELSE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<EvalContext> eval() {
			return getRuleContexts(EvalContext.class);
		}
		public TerminalNode RIGHT_BRACE(int i) {
			return getToken(WormsParserParser.RIGHT_BRACE, i);
		}
		public List<TerminalNode> LEFT_BRACE() { return getTokens(WormsParserParser.LEFT_BRACE); }
		public IfthenelseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifthenelse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WormsParserListener ) ((WormsParserListener)listener).enterIfthenelse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WormsParserListener ) ((WormsParserListener)listener).exitIfthenelse(this);
		}
	}

	public final IfthenelseContext ifthenelse() throws RecognitionException {
		IfthenelseContext _localctx = new IfthenelseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ifthenelse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112); match(IF);
			setState(113); expr(0);
			setState(115);
			_la = _input.LA(1);
			if (_la==THEN) {
				{
				setState(114); match(THEN);
				}
			}

			setState(117); match(LEFT_BRACE);
			setState(119);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT) | (1L << BOOL) | (1L << DOUBLE) | (1L << ENTITY) | (1L << TURN) | (1L << MOVE) | (1L << JUMP) | (1L << TOGGLEWEAP) | (1L << FIRE) | (1L << SKIP) | (1L << IF) | (1L << WHILE) | (1L << FOREACH) | (1L << IDENTIFIER) | (1L << SEMICOLON))) != 0)) {
				{
				setState(118); eval();
				}
			}

			setState(121); match(RIGHT_BRACE);
			setState(128);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(122); match(ELSE);
				setState(123); match(LEFT_BRACE);
				setState(125);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT) | (1L << BOOL) | (1L << DOUBLE) | (1L << ENTITY) | (1L << TURN) | (1L << MOVE) | (1L << JUMP) | (1L << TOGGLEWEAP) | (1L << FIRE) | (1L << SKIP) | (1L << IF) | (1L << WHILE) | (1L << FOREACH) | (1L << IDENTIFIER) | (1L << SEMICOLON))) != 0)) {
					{
					setState(124); eval();
					}
				}

				setState(127); match(RIGHT_BRACE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhiledoContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(WormsParserParser.WHILE, 0); }
		public TerminalNode RIGHT_BRACE() { return getToken(WormsParserParser.RIGHT_BRACE, 0); }
		public TerminalNode DO() { return getToken(WormsParserParser.DO, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public EvalContext eval() {
			return getRuleContext(EvalContext.class,0);
		}
		public TerminalNode LEFT_BRACE() { return getToken(WormsParserParser.LEFT_BRACE, 0); }
		public WhiledoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whiledo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WormsParserListener ) ((WormsParserListener)listener).enterWhiledo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WormsParserListener ) ((WormsParserListener)listener).exitWhiledo(this);
		}
	}

	public final WhiledoContext whiledo() throws RecognitionException {
		WhiledoContext _localctx = new WhiledoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_whiledo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130); match(WHILE);
			setState(131); expr(0);
			setState(133);
			_la = _input.LA(1);
			if (_la==DO) {
				{
				setState(132); match(DO);
				}
			}

			setState(135); match(LEFT_BRACE);
			setState(137);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT) | (1L << BOOL) | (1L << DOUBLE) | (1L << ENTITY) | (1L << TURN) | (1L << MOVE) | (1L << JUMP) | (1L << TOGGLEWEAP) | (1L << FIRE) | (1L << SKIP) | (1L << IF) | (1L << WHILE) | (1L << FOREACH) | (1L << IDENTIFIER) | (1L << SEMICOLON))) != 0)) {
				{
				setState(136); eval();
				}
			}

			setState(139); match(RIGHT_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForeachContext extends ParserRuleContext {
		public TerminalNode RIGHT_BRACE() { return getToken(WormsParserParser.RIGHT_BRACE, 0); }
		public TerminalNode DO() { return getToken(WormsParserParser.DO, 0); }
		public TerminalNode IDENTIFIER() { return getToken(WormsParserParser.IDENTIFIER, 0); }
		public EvalContext eval() {
			return getRuleContext(EvalContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(WormsParserParser.COMMA, 0); }
		public EntityspecContext entityspec() {
			return getRuleContext(EntityspecContext.class,0);
		}
		public TerminalNode LEFT_BRACE() { return getToken(WormsParserParser.LEFT_BRACE, 0); }
		public TerminalNode RIGHT_PAREN() { return getToken(WormsParserParser.RIGHT_PAREN, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(WormsParserParser.LEFT_PAREN, 0); }
		public TerminalNode FOREACH() { return getToken(WormsParserParser.FOREACH, 0); }
		public ForeachContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_foreach; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WormsParserListener ) ((WormsParserListener)listener).enterForeach(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WormsParserListener ) ((WormsParserListener)listener).exitForeach(this);
		}
	}

	public final ForeachContext foreach() throws RecognitionException {
		ForeachContext _localctx = new ForeachContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_foreach);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141); match(FOREACH);
			setState(142); match(LEFT_PAREN);
			setState(143); entityspec();
			setState(144); match(COMMA);
			setState(145); match(IDENTIFIER);
			setState(146); match(RIGHT_PAREN);
			setState(148);
			_la = _input.LA(1);
			if (_la==DO) {
				{
				setState(147); match(DO);
				}
			}

			setState(150); match(LEFT_BRACE);
			setState(152);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT) | (1L << BOOL) | (1L << DOUBLE) | (1L << ENTITY) | (1L << TURN) | (1L << MOVE) | (1L << JUMP) | (1L << TOGGLEWEAP) | (1L << FIRE) | (1L << SKIP) | (1L << IF) | (1L << WHILE) | (1L << FOREACH) | (1L << IDENTIFIER) | (1L << SEMICOLON))) != 0)) {
				{
				setState(151); eval();
				}
			}

			setState(154); match(RIGHT_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(WormsParserParser.ASSIGN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(WormsParserParser.IDENTIFIER, 0); }
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WormsParserListener ) ((WormsParserListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WormsParserListener ) ((WormsParserListener)listener).exitAssign(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156); match(IDENTIFIER);
			setState(157); match(ASSIGN);
			setState(158); expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
